# libdiku

./: CMakeLists.txt  INFERENCE.md  README.md  SCHEMA.md
data2/: steading.are
docs/: API.md
include/: diku.h  diku.hpp  diku_parser.h
include/diku/: arena.h  config.h  context.h  coords.h  debug.h  find.h  format.h  graph.h  lexer.h  pager.h  resets.h  schema.h  sections.h  stats.h  types.h  util.h
src/: diku_parser.c  mud_client.c  test_parser.c
src/impl/: diku_parser_impl.c
tests/: test_parser_comprehensive.c
tests/golden/: comprehensive.txt  haon_all.txt  overview.txt
